fix: Elements spacing in footer.

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -18,6 +18,9 @@ footer {
   }
 
   .lang {
+    margin-top: 1px;
+    line-height: 12px;
+    position: relative;
     text-transform: uppercase;
   }
 }
